--- a/SimpleUnits/SimpleUnits.csproj
+++ b/SimpleUnits/SimpleUnits.csproj
@@ -3,6 +3,14 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+	<PackageId>SimpleUnits</PackageId>
+	<Version>1.0.0</Version>
+	<Authors>dmcoy</Authors>
+	<Description>A lightweight static class library for unit conversion in dotnet projects.</Description>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<RepositoryUrl>https://github.com/dmcoy/SimpleUnits</RepositoryUrl>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
