--- a/SimpleUnits/SimpleUnits.csproj
+++ b/SimpleUnits/SimpleUnits.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
 	<PackageId>SimpleUnits</PackageId>
 	<Version>1.0.0</Version>
 	<Authors>dmcoy</Authors>
@@ -15,6 +14,17 @@
     <PackageProjectUrl>https://github.com/dmcoy/SimpleUnits</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <Title>Simple Units</Title>
+    <PackageReleaseNotes>Initial release</PackageReleaseNotes>
+    <PackageTags>units; unit; convert; conversion; metric; imperial;</PackageTags>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
